proyecto3/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: proyecto3
  labels:
    name: proyecto3
