proyecto3/k8s/09-rabbit-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbit-consumer
  namespace: proyecto3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbit-consumer
  template:
    metadata:
      labels:
        app: rabbit-consumer
    spec:
      containers:
      - name: rabbit-consumer
        image: 34.31.7.251:5000/rabbit-consumer:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
