proyecto3/k8s/02-rust-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-api
  namespace: proyecto3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rust-api
  template:
    metadata:
      labels:
        app: rust-api
    spec:
      containers:
      - name: rust-api
        image: 34.31.7.251:5000/rust-api:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: rust-api-service
  namespace: proyecto3
spec:
  selector:
    app: rust-api
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
