proyecto3/k8s/03-go-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-api
  namespace: proyecto3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-api
  template:
    metadata:
      labels:
        app: go-api
    spec:
      containers:
      - name: go-api
        image: 34.31.7.251:5000/go-api:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: go-api-service
  namespace: proyecto3
spec:
  selector:
    app: go-api
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
