proyecto3/k8s/05-rabbit-writer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbit-writer
  namespace: proyecto3
spec:
  replicas: 1  # Se probará con 1 y 2 réplicas
  selector:
    matchLabels:
      app: rabbit-writer
  template:
    metadata:
      labels:
        app: rabbit-writer
    spec:
      containers:
      - name: rabbit-writer
        image: 34.31.7.251:5000/rabbit-writer:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 50052
---
apiVersion: v1
kind: Service
metadata:
  name: rabbit-writer-service
  namespace: proyecto3
spec:
  selector:
    app: rabbit-writer
  ports:
  - port: 50052
    targetPort: 50052
  type: ClusterIP
