proyecto3/k8s/11-locust.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust
  namespace: proyecto3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: locust
  template:
    metadata:
      labels:
        app: locust
    spec:
      containers:
      - name: locust
        image: 34.31.7.251:5000/locust:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 8089
---
apiVersion: v1
kind: Service
metadata:
  name: locust-service
  namespace: proyecto3
spec:
  selector:
    app: locust
  ports:
  - port: 8089
    targetPort: 8089
  type: ClusterIP
