proyecto3/k8s/01-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proyecto3-ingress
  namespace: proyecto3
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /tweet
        pathType: Prefix
        backend:
          service:
            name: rust-api-service
            port:
              number: 8000
      - path: /locust
        pathType: Prefix
        backend:
          service:
            name: locust-service
            port:
              number: 8089
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana-service
            port:
              number: 3000
